tests/specs/ecosystem/taisan11/kejibanhelper/0_2_0.test
taisan11/kejibanhelper/0.2.0
-- deno.lock --

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /mod.ts:1:17
  | 
1 | export function SubjectPaser(subjecttxt: string) {
  |                 ^^^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /mod.ts:11:17
   | 
11 | export function NewSubject(subjecttxt: string,title: string,unixtime:number) {
   |                 ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /mod.ts:19:17
   | 
19 | export function DatPaser(dattxt: string) {
   |                 ^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /mod.ts:48:17
   | 
48 | export function NewDat(name: string,mail: string,message: string,DATAS:number,title: string) {
   |                 ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /mod.ts:51:17
   | 
51 | export function PostDat(dattxt: string,name: string,mail: string,message: string,DATAS:number) {
   |                 ^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


